--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -2,9 +2,18 @@
 	<head>
 		<script src="js/jquery.min.js" type="text/javascript"></script>
 		<script src="js/jquery.flot.js" type="text/javascript"></script>
+		<style>
+			h1 {
+				font-family: Times New Roman;
+				font-size: 20pt;
+				color: #AA2222;
+				text-align: center;
+				padding-top: 8px;				
+			}
+		</style>
 	</head>
 	<body>
-		<h1>Graph</h1>
+		<h1>Check you can connect to http://192.168.1.1:8989/ping</h1>
 		
 		<div id="placeholder" style="width:600px;height:400px"></div>
 		
@@ -18,8 +27,8 @@
 					return;
 				}
 
-				$("h1").empty();
-				$("h1").append("Updated "+new Date());
+				//$("h1").empty();
+				//$("h1").append("Updated "+new Date());
 				$.plot($("#placeholder"),
 						[
 							{
